--- a/es6.html
+++ b/es6.html
@@ -5,6 +5,8 @@
     <title>ES6 exercise</title>
 </head>
 <body>
-<script src="js/map-filter-reduce.js"></script>
+<!--<script src="js/map-filter-reduce.js"></script>-->
+<script src="js/keys.js"></script>
+<script src="js/promises.js"></script>
 </body>
 </html>
