add elements from walkthrough and complete the exercise

--- a/es6.html
+++ b/es6.html
@@ -5,6 +5,10 @@
     <title>ES6 exercise</title>
 </head>
 <body>
+<label for="username">Github Username: </label>
+<input id="username" type="text">
+<button id="lookitup">Look It Up</button>
+<h4>Last Commit Date: <span id="output"></span></h4>
 <!--<script src="js/map-filter-reduce.js"></script>-->
 <script src="js/keys.js"></script>
 <script src="js/promises.js"></script>
